# python-project-52

./: Makefile  README.md  build.sh  conftest.py  db.sqlite3  manage.py  pyproject.toml  requirements.txt  setup.py
labels/: forms.py  models.py  tests.py  views.py
locale/ru/LC_MESSAGES/: django.po
src/task_manager/: settings.py  urls.py  wsgi.py
src/task_manager/labels/: tests.py
src/task_manager/statuses/: urls.py
src/task_manager/tasks/: models.py  tests.py
src/task_manager/tests/: tests_users.py
statuses/: forms.py  models.py  tests.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: forms.py  models.py  tests.py  views.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0003_alter_task_author_alter_task_description_and_more.py
task_manager/templates/: 404.html  500.html  base.html  index.html
task_manager/templates/labels/: delete.html  form.html  list.html
task_manager/templates/statuses/: delete.html  form.html  list.html
task_manager/tests/: tests_users.py
task_manager/users/: forms.py  models.py  urls.py  views.py
tasks/: filters.py  forms.py  models.py  tests.py  views.py
tasks/migrations/: 0001_initial.py
templates/statuses/: form.html
templates/tasks/: list.html
templates/users/: delete.html  form.html
users/: forms.py  urls.py  views.py
(+21 files in other folders)
